feat(calendar): mark partial ranges with alt selected class

--- a/demo/app/demos/calendar/demo.component.html
+++ b/demo/app/demos/calendar/demo.component.html
@@ -45,7 +45,7 @@ Value: {{monthArray}}
         <button vcl-button class="vclTransparent vclLayoutFlex" type="button" (click)="calendar.viewDate = today">
           go to today
         </button>
-        <button vcl-square-button class="vclTransparent vclLayoutFlex" type="button" (click)="calendar.viewDate = calendar.date">
+        <button vcl-square-button class="vclTransparent vclLayoutFlex" type="button" (click)="calendar.viewDate = calendar.value">
           go to selected
         </button>
       </div>
