--- a/lib/ng-vcl/src/calendar/views/year.component.html
+++ b/lib/ng-vcl/src/calendar/views/year.component.html
@@ -16,7 +16,8 @@
   <div *ngFor="let month of group"
        class="vclDGCell vclCalItem" 
        [class.vclToday]="month.isCurrentMonth"
-       [class.vclSelected]="!!month.selected"
+       [class.vclSelected]="month.selected === true || month.selected === 'range'"
+       [class.vclSelectedAlt]="month.selected === 'range-partial'"
        [class.vclSelectedBeg]="month.selected === 'range-start' || month.selected === 'range-start-end'"
        [class.vclSelectedEnd]="month.selected === 'range-end' || month.selected === 'range-start-end'"
        [class.vclDisabled]="disabled"
