--- a/lib/ng-vcl/src/calendar/calendar.component.html
+++ b/lib/ng-vcl/src/calendar/calendar.component.html
@@ -16,8 +16,7 @@
                     [disabled]="disabled"
                     [value]="value" 
                     [viewDate]="viewDate" 
-                    [available]="available" 
-                    [unavailable]="unavailable" 
+                    [dateModifiers]="dateModifiers" 
                     [minDate]="minDate"
                     [maxDate]="maxDate"
                     [showWeekOfTheYear]="showWeekOfTheYear"
