--- a/lib/ng-vcl/src/calendar/views/hours.component.html
+++ b/lib/ng-vcl/src/calendar/views/hours.component.html
@@ -3,15 +3,15 @@
       <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
         <div class="vclButtonDim"></div>
         <button vcl-button class="vclTransparent vclCalHeaderLabel" (click)="onLabelClick()">
-          {{hoursCalendar.use24hTime ? 'Hours' : 'AM' }}
+          {{calendar.use24hTime ? 'Hours' : 'AM' }}
         </button>
         <div class="vclButtonDim"></div>
       </div>
     </div>
   </div>
 
-  <ng-container *ngFor="let hoursRow of hoursCalendar.hours; let i = index">
-    <div class="vclDGRow" *ngIf="!hoursCalendar.use24hTime && i === 2">
+  <ng-container *ngFor="let hoursRow of calendar.hours; let i = index">
+    <div class="vclDGRow" *ngIf="!calendar.use24hTime && i === 2">
       <div class="vclDGCell">
         <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
           <div class="vclButtonDim"></div>
