--- a/lib/ng-vcl/src/calendar/views/minutes.component.html
+++ b/lib/ng-vcl/src/calendar/views/minutes.component.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div class="vclDGRow" role="row" *ngFor="let minutesRow of minutesCalendar.minutes">
+<div class="vclDGRow" role="row" *ngFor="let minutesRow of calendar.minutes">
   <div *ngFor="let m of minutesRow" 
        role="option" 
        tabindex="0" 
