--- a/lib/ng-vcl/src/calendar/views/year.component.html
+++ b/lib/ng-vcl/src/calendar/views/year.component.html
@@ -5,14 +5,14 @@
       <button vcl-square-button class="vclTransparent" type="button" (click)="onGoToPrevYear()">
         <vcl-icon icon="vcl:arrow-left"></vcl-icon>
       </button>
-      <button vcl-button class="vclTransparent vclCalHeaderLabel" (click)="onLabelClick()">{{calendarYear.label}}</button>
+      <button vcl-button class="vclTransparent vclCalHeaderLabel" (click)="onLabelClick()">{{calendar.label}}</button>
       <button vcl-square-button class="vclTransparent" type="button" (click)="onGoToNextYear()">
         <vcl-icon icon="vcl:arrow-right"></vcl-icon>
       </button>
     </div>
   </div>
 </div>
-<div class="vclDGRow" role="row" *ngFor="let group of calendarYear.months">
+<div class="vclDGRow" role="row" *ngFor="let group of calendar.months">
   <div *ngFor="let month of group"
        class="vclDGCell vclCalItem" 
        [class.vclToday]="month.isCurrentMonth"
