--- a/lib/ng-vcl/src/calendar/views/years.component.html
+++ b/lib/ng-vcl/src/calendar/views/years.component.html
@@ -16,6 +16,10 @@
        class="vclDGCell vclCalItem" 
        [class.vclToday]="year.isCurrentYear"
        [class.vclDisabled]="disabled"
+       [class.vclSelected]="year.selected === true || year.selected === 'range'"
+       [class.vclSelectedAlt]="year.selected === 'range-partial'"
+       [class.vclSelectedBeg]="year.selected === 'range-start' || year.selected === 'range-start-end'"
+       [class.vclSelectedEnd]="year.selected === 'range-end' || year.selected === 'range-start-end'"       
        role="gridcell" 
        tabindex="0" 
        (click)="onSelectYear(year.date)"
