--- a/lib/ng-vcl/src/calendar/calendar.component.html
+++ b/lib/ng-vcl/src/calendar/calendar.component.html
@@ -2,23 +2,24 @@
 <vcl-calendar-view-years *ngIf="view === 'years'" 
                     [value]="value" 
                     [viewDate]="viewDate"
+                    [disabled]="isDisabled"
                     (valueChange)="onValueChange('years', $event)"
                     (viewDateChange)="onViewDateChange('years', $event)"
                     ></vcl-calendar-view-years>
 <vcl-calendar-view-year *ngIf="view === 'year'" 
                     [value]="value" 
                     [viewDate]="viewDate" 
+                    [disabled]="isDisabled"
+                    [dateModifiers]="dateModifiers" 
                     (viewDateChange)="onViewDateChange('year', $event)"
                     (valueChange)="onValueChange('year', $event)"
                     (labelClick)="onLabelClick('year')"                    
                     ></vcl-calendar-view-year>
 <vcl-calendar-view-month *ngIf="view === 'month'" 
-                    [disabled]="disabled"
+                    [disabled]="isDisabled"
                     [value]="value" 
                     [viewDate]="viewDate" 
                     [dateModifiers]="dateModifiers" 
-                    [minDate]="minDate"
-                    [maxDate]="maxDate"
                     [showWeekOfTheYear]="showWeekOfTheYear"
                     (viewDateChange)="onViewDateChange('month', $event)"
                     (valueChange)="onValueChange('month', $event)"
@@ -26,11 +27,13 @@
                     ></vcl-calendar-view-month>
 <vcl-calendar-view-hours *ngIf="view === 'hours'" 
                     [value]="value" 
+                    [disabled]="isDisabled"
                     (labelClick)="onLabelClick('hours')"
                     (valueChange)="onValueChange('hours', $event)"
                     ></vcl-calendar-view-hours>                           
 <vcl-calendar-view-minutes *ngIf="view === 'minutes'" 
                     [value]="value" 
+                    [disabled]="isDisabled"
                     (labelClick)="onLabelClick('minutes')"
                     (valueChange)="onValueChange('minutes', $event)"
                     ></vcl-calendar-view-minutes>                           
