feat(icon): add vcl:menu

--- a/demo/app/demos/icon/icons.component.html
+++ b/demo/app/demos/icon/icons.component.html
@@ -27,3 +27,4 @@
 <vcl-icon icon='vcl:remove'></vcl-icon> vcl:remove<br>
 <vcl-icon icon='vcl:calendar'></vcl-icon> vcl:calendar<br>
 <vcl-icon icon='vcl:clock'></vcl-icon> vcl:clock<br>
+<vcl-icon icon='vcl:menu'></vcl-icon> vcl:menu<br>
