--- a/demo/app/demos/notifier/demo.component.html
+++ b/demo/app/demos/notifier/demo.component.html
@@ -1,10 +1,10 @@
 <vcl-button-group [(value)]="position" mode="single">
-  <button vcl-button [value]="positions.TopRight">Top Right</button>
-  <button vcl-button [value]="positions.Top">Top</button>
-  <button vcl-button [value]="positions.TopLeft">Top Left</button>
-  <button vcl-button [value]="positions.BottomRight">Bottom Right</button>
-  <button vcl-button [value]="positions.Bottom">Bottom</button>
-  <button vcl-button [value]="positions.BottomLeft">Bottom Left</button>
+  <button vcl-square-button [value]="positions.TopRight"><vcl-icon icon="mdi:arrow-top-right"></vcl-icon></button>
+  <button vcl-square-button [value]="positions.Top"><vcl-icon icon="mdi:arrow-up"></vcl-icon></button>
+  <button vcl-square-button [value]="positions.TopLeft"><vcl-icon icon="mdi:arrow-top-left"></vcl-icon></button>
+  <button vcl-square-button [value]="positions.BottomRight"><vcl-icon icon="mdi:arrow-bottom-right"></vcl-icon></button>
+  <button vcl-square-button [value]="positions.Bottom"><vcl-icon icon="mdi:arrow-down"></vcl-icon></button>
+  <button vcl-square-button [value]="positions.BottomLeft"><vcl-icon icon="mdi:arrow-bottom-left"></vcl-icon></button>
 </vcl-button-group>
 
 <br><br>
