docs: update docs

--- a/demo/app/components/app/app.component.html
+++ b/demo/app/components/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="vclLayoutVertical docMain">
     <header class="vclApplicationHeader vclLayoutHorizontal vclLayoutCenter vclLayoutJustified">
       <button vcl-square-button class="vclTransparent" *ngIf="xsmall" (click)="drawer.toggle()">
-        <vcl-icon icon="vcl:menu"></vcl-icon>
+        <vcl-icon icon="vcl:menu" class="vclScale180p"></vcl-icon>
       </button>
       <div role="banner">
         <a href="#" class="vclLayoutHorizontal vclLayoutCenter">
