--- a/demo/app/demos/button/demo.component.html
+++ b/demo/app/demos/button/demo.component.html
@@ -13,21 +13,21 @@
 <button vcl-button (click)="someAction($event)" >
   <vcl-icogram>
     <vcl-icon vclAppend icon="fas:bolt"></vcl-icon>
-     Icogram button with appended icon
+     Appended icon
   </vcl-icogram>
 </button>
 <br><br>
 <button vcl-button (click)="someAction($event)">
   <vcl-icogram>
     <vcl-icon vclPrepend icon="fas:bolt"></vcl-icon>
-    Icogram button with prepended icon
+    Prepended icon
   </vcl-icogram>
 </button>
 <br><br>
 <button vcl-button (click)="someAction($event)">
   <vcl-icogram>
       <vcl-icon vclPrepend icon="fas:bolt"></vcl-icon>
-      Icogram button with prepended and appended icon
+      Prepended and appended icon
       <vcl-icon vclAppend icon="fas:bolt"></vcl-icon>
   </vcl-icogram>
 </button>
